--- a/TDDoSer.csproj
+++ b/TDDoSer.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{5BF6AAFD-D3DD-4327-8669-B46A6A74ED87}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>TDDoSer</RootNamespace>
-    <AssemblyName>Win10-WinForms</AssemblyName>
+    <AssemblyName>TDDoSer</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -35,14 +35,24 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Bunifu_UI_v1.5.3">
+      <HintPath>D:\Downloads\UIs\Bunifu_UI_v1.5.3.dll</HintPath>
+    </Reference>
     <Reference Include="Guna.UI">
       <HintPath>D:\Downloads\UIs\Guna.UI.dll</HintPath>
     </Reference>
     <Reference Include="Guna.UI2">
       <HintPath>D:\Downloads\UIs\Guna.UI2.dll</HintPath>
     </Reference>
+    <Reference Include="MetroSet UI">
+      <HintPath>D:\Downloads\UIs\MetroSet UI.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Design" />
+    <Reference Include="System.Management" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -52,6 +62,9 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="XanderUI">
+      <HintPath>D:\Downloads\UIs\XanderUI.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Form1.cs">
